# src/controllers/api/booking/validator/create-booking.ts
@@ -1,4 +1,5 @@
 const createBookingRules = {
+  cafe: ["required", "regex:/^[0-9a-fA-F]{24}$/i"],
   slots: "required|array",
   "slots.*.date": "required|string",
   "slots.*.time": "required|array",
